apps/base/nextcloud/cron.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-cron
  namespace: nextcloud
  labels:
    app.kubernetes.io/component: cron
    app.kubernetes.io/name: nextcloud-cron
spec:
  revisionHistoryLimit: 3
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: cron
      app.kubernetes.io/name: nextcloud-cron
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: cron
        app.kubernetes.io/name: nextcloud-cron
    spec:
      containers:
        - name: cron
          image: nextcloud:apache
          imagePullPolicy: Always
          command:
            - /cron.sh
          resources:
            requests:
              cpu: 10m
              memory: 15Mi
            limits:
              cpu: 1000m
              memory: 1Gi
          volumeMounts:
            - name: nextcloud-storage
              mountPath: /var/www/html
      restartPolicy: Always
      volumes:
        - name: nextcloud-storage
          persistentVolumeClaim:
            claimName: nextcloud-pvc
