apps/base/nextcloud/exporter.yaml
#
# Reference:
# https://github.com/xperimental/nextcloud-exporter
#

apiVersion: v1
kind: Service
metadata:
  name: nextcloud-exporter
  namespace: nextcloud
  labels:
    app.kubernetes.io/component: service
    app.kubernetes.io/name: nextcloud-exporter
spec:
  selector:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: nextcloud-exporter
  ports:
    - name: metrics
      port: 9205
      targetPort: metrics
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-exporter
  namespace: nextcloud
  labels:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: nextcloud-exporter
spec:
  revisionHistoryLimit: 1
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: app
      app.kubernetes.io/name: nextcloud-exporter
  template:
    metadata:
      labels:
        app.kubernetes.io/component: app
        app.kubernetes.io/name: nextcloud-exporter
    spec:
      restartPolicy: Always
      containers:
        - name: nextcloud-exporter
          image: ghcr.io/xperimental/nextcloud-exporter:0.7.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: metrics
              containerPort: 9205
              protocol: TCP
          resources:
            requests:
              cpu: 10m
              memory: 150Mi
            limits:
              cpu: 150m
              memory: 250Mi
