apps/base/nextcloud/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-postgres-db
  namespace: nextcloud
  labels:
    component: postgressql
spec:
  selector:
    component: postgressql-db
  type: NodePort
  ports:
    - name: pgql
      port: 5432
      protocol: TCP
      targetPort: 5432
      nodePort: 31432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nextcloud-postgressql-db
  namespace: nextcloud
  labels:
    component: postgressql
spec:
  serviceName: nextcloud-postgressql-db-service
  replicas: 1
  selector:
    matchLabels:
      component: postgressql-db
  template:
    metadata:
      labels:
        component: postgressql-db
    spec:
      containers:
        - name: nextcloud-postgressql-db
          image: postgres:14.5
          ports:
            - containerPort: 5432
          resources:
            requests:
              cpu: 10m
              memory: 50Mi
            limits:
              cpu: 150m
              memory: 500Mi
          volumeMounts:
            - name: nextcloud-pg-data
              mountPath: /var/lib/postgresql/data
              subPath: pgdata
      terminationGracePeriodSeconds: 60
      volumes:
        - name: nextcloud-pg-data
          persistentVolumeClaim:
            claimName: nextcloud-pg-pvc
