apps/base/nextcloud/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-redis
  namespace: nextcloud
  labels:
    app.kubernetes.io/component: service
    app.kubernetnes.io/name: nextcloud-redis
spec:
  selector:
    app.kubernetes.io/component: redis
    app.kubernetes.io/name: nextcloud-redis
  type: ClusterIP
  ports:
    - name: redis
      port: 6379
      targetPort: redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-redis
  namespace: nextcloud
  labels:
    app.kubernetes.io/component: redis
    app.kubernetes.io/name: nextcloud-redis
spec:
  revisionHistoryLimit: 3
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: redis
      app.kubernetes.io/name: nextcloud-redis
  template:
    metadata:
      labels:
        app.kubernetes.io/component: redis
        app.kubernetes.io/name: nextcloud-redis
    spec:
      containers:
        - name: nextcloud-redis
          image: redis:alpine
          imagePullPolicy: Always
          ports:
            - name: redis
              containerPort: 6379
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
            limits:
              cpu: 300m
              memory: 500Mi
      restartPolicy: Always
